--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
 
         <!-- cards -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
             <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
                   <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
@@ -213,7 +213,7 @@
                   </div>
                 </div>
               </div>
-            <div class="card  bg-base-100 shadow-xl flex-1 flex-1">
+            <div class="card  bg-base-100 shadow-xl flex-1 ">
                 <figure class="px-10 pt-10">
                   <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
                 </figure>
@@ -228,6 +228,8 @@
         </div>
 
     </section>
+
+    <!-- slider section -->
 
 
 
