add new section

--- a/index.html
+++ b/index.html
@@ -384,6 +384,90 @@
                 .</p>
         </div>
 
+        <div class=" lg:flex justify-between gap-10">
+
+            <div class=" grid lg:  grid-cols-2 gap-2 flex-1 md:grid-cols-2   ">
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">
+                        Shoes!
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <div class="badge badge-outline">Fashion</div> 
+                        <div class="badge badge-outline">Products</div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">
+                        Shoes!
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <div class="badge badge-outline">Fashion</div> 
+                        <div class="badge badge-outline">Products</div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-base-100 shadow-xl">
+                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">
+                        Shoes!
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <div class="badge badge-outline">Fashion</div> 
+                        <div class="badge badge-outline">Products</div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card  bg-base-100 shadow-xl">
+                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">
+                        Shoes!
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <div class="badge badge-outline">Fashion</div> 
+                        <div class="badge badge-outline">Products</div>
+                      </div>
+                    </div>
+                  </div>
+
+
+            </div>
+
+            <div class="grid lg: grid-cols-1 flex-1">
+
+                <input type="text" placeholder="Type here" class="input input-bordered input-secondary w-full max-w-xs" />
+                <input type="text" placeholder="Type here" class="input input-bordered input-secondary w-full max-w-xs" />
+                <input type="text" placeholder="Type here" class="input input-bordered input-secondary w-full max-w-xs" />
+
+                <textarea class="textarea textarea-accent mb-3 " placeholder="Bio"></textarea>
+
+                <button class="btn bg-gradient-start hover:bg-gradient-start text-white">Accent</button>
+
+
+
+
+            </div>
+
+
+
+        </div>
+
+        
+
 
 
     </section>
