--- a/index.html
+++ b/index.html
@@ -472,6 +472,41 @@
 
     </section>
 
+    <!-- fotter section -->
+
+    <footer>
+        <footer class="footer p-10 bg-neutral text-neutral-content">
+            <div>
+              <span class="footer-title"><img src="./images/logo.png" alt=""></span> 
+              <a class="link link-hover">Branding</a>
+              <a class="link link-hover">Design</a>
+              <a class="link link-hover">Marketing</a>
+              <a class="link link-hover">Advertisement</a>
+            </div> 
+            <div>
+              <span class="footer-title">Company</span> 
+              <a class="link link-hover">About us</a>
+              <a class="link link-hover">Contact</a>
+              <a class="link link-hover">Jobs</a>
+              <a class="link link-hover">Press kit</a>
+            </div> 
+            <div>
+              <span class="footer-title">Legal</span> 
+              <a class="link link-hover">Terms of use</a>
+              <a class="link link-hover">Privacy policy</a>
+              <a class="link link-hover"><div class="form-control">
+                <label class="label">
+                  <span class="label-text">Enter amount</span>
+                </label>
+                <label class="input-group">
+                  <input type="text" placeholder="0.01" class="input input-bordered" />
+                  <span>BTC</span>
+                </label>
+              </div></a>
+            </div>
+          </footer>
+    </footer>
+
 
 
 
