--- a/index.html
+++ b/index.html
@@ -144,91 +144,86 @@
         </div>
 
         <!-- cards -->
-        <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
+        <div class="grid grid-cols-1 gap-1 md:grid-cols-2 lg:grid-cols-3">
             <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    <img src="./images/business.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Business Law</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card  bg-base-100 shadow-xl flex-1">
-                <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
-                    <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <img src="./images/Frame.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    <img src="./images/criminal.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Criminal Law</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <img src="./images/Frame.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    <img src="/images/child.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Child Support</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <img src="./images/Frame.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    <img src="/images/education.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Education Law</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <img src="./images/Frame.png" alt="">
                     </div>
                 </div>
             </div>
             <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    <img src="/images/divorce.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Divorce Law</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <img src="./images/Frame.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="card  bg-base-100 shadow-xl flex-1 ">
+            <div class="card  bg-base-100 shadow-xl flex-1">
                 <figure class="px-10 pt-10">
-                    <img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" class="rounded-xl" />
+                    <img src="/images/tax.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
+                    <h2 class="card-title">Tax Law</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
                     <div class="card-actions">
-                        <button class="btn btn-primary">Buy Now</button>
+                        <img src="./images/Frame.png" alt="">
                     </div>
                 </div>
             </div>
+
         </div>
 
     </section>
@@ -390,68 +385,71 @@
                 <div class="card  bg-base-100 shadow-xl">
                     <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">
-                        Shoes!
-                        <div class="badge badge-secondary">NEW</div>
-                      </h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <div class="badge badge-outline">Fashion</div> 
-                        <div class="badge badge-outline">Products</div>
-                      </div>
+                        <h2 class="card-title">
+                            Shoes!
+                            <div class="badge badge-secondary">NEW</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="card-actions justify-end">
+                            <div class="badge badge-outline">Fashion</div>
+                            <div class="badge badge-outline">Products</div>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="card bg-base-100 shadow-xl">
                     <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">
-                        Shoes!
-                        <div class="badge badge-secondary">NEW</div>
-                      </h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <div class="badge badge-outline">Fashion</div> 
-                        <div class="badge badge-outline">Products</div>
-                      </div>
+                        <h2 class="card-title">
+                            Shoes!
+                            <div class="badge badge-secondary">NEW</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="card-actions justify-end">
+                            <div class="badge badge-outline">Fashion</div>
+                            <div class="badge badge-outline">Products</div>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="card bg-base-100 shadow-xl">
                     <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">
-                        Shoes!
-                        <div class="badge badge-secondary">NEW</div>
-                      </h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <div class="badge badge-outline">Fashion</div> 
-                        <div class="badge badge-outline">Products</div>
-                      </div>
+                        <h2 class="card-title">
+                            Shoes!
+                            <div class="badge badge-secondary">NEW</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="card-actions justify-end">
+                            <div class="badge badge-outline">Fashion</div>
+                            <div class="badge badge-outline">Products</div>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="card  bg-base-100 shadow-xl">
                     <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">
-                        Shoes!
-                        <div class="badge badge-secondary">NEW</div>
-                      </h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <div class="badge badge-outline">Fashion</div> 
-                        <div class="badge badge-outline">Products</div>
-                      </div>
+                        <h2 class="card-title">
+                            Shoes!
+                            <div class="badge badge-secondary">NEW</div>
+                        </h2>
+                        <p>If a dog chews shoes whose shoes does he choose?</p>
+                        <div class="card-actions justify-end">
+                            <div class="badge badge-outline">Fashion</div>
+                            <div class="badge badge-outline">Products</div>
+                        </div>
                     </div>
-                  </div>
+                </div>
 
 
             </div>
 
             <div class="grid lg: grid-cols-1 flex-1">
 
-                <input type="text" placeholder="Type here" class="input input-bordered input-secondary w-full max-w-xs" />
-                <input type="text" placeholder="Type here" class="input input-bordered input-secondary w-full max-w-xs" />
-                <input type="text" placeholder="Type here" class="input input-bordered input-secondary w-full max-w-xs" />
+                <input type="text" placeholder="Type here"
+                    class="input input-bordered input-secondary w-full max-w-xs" />
+                <input type="text" placeholder="Type here"
+                    class="input input-bordered input-secondary w-full max-w-xs" />
+                <input type="text" placeholder="Type here"
+                    class="input input-bordered input-secondary w-full max-w-xs" />
 
                 <textarea class="textarea textarea-accent mb-3 " placeholder="Bio"></textarea>
 
@@ -466,7 +464,7 @@
 
         </div>
 
-        
+
 
 
 
@@ -477,34 +475,36 @@
     <footer>
         <footer class="footer p-10 bg-neutral text-neutral-content">
             <div>
-              <span class="footer-title"><img src="./images/logo.png" alt=""></span> 
-              <a class="link link-hover">Branding</a>
-              <a class="link link-hover">Design</a>
-              <a class="link link-hover">Marketing</a>
-              <a class="link link-hover">Advertisement</a>
-            </div> 
-            <div>
-              <span class="footer-title">Company</span> 
-              <a class="link link-hover">About us</a>
-              <a class="link link-hover">Contact</a>
-              <a class="link link-hover">Jobs</a>
-              <a class="link link-hover">Press kit</a>
-            </div> 
-            <div>
-              <span class="footer-title">Legal</span> 
-              <a class="link link-hover">Terms of use</a>
-              <a class="link link-hover">Privacy policy</a>
-              <a class="link link-hover"><div class="form-control">
-                <label class="label">
-                  <span class="label-text">Enter amount</span>
-                </label>
-                <label class="input-group">
-                  <input type="text" placeholder="0.01" class="input input-bordered" />
-                  <span>BTC</span>
-                </label>
-              </div></a>
+                <span class="footer-title"><img src="./images/logo.png" alt=""></span>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
             </div>
-          </footer>
+            <div>
+                <span class="footer-title">Company</span>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </div>
+            <div>
+                <span class="footer-title">Legal</span>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">
+                    <div class="form-control">
+                        <label class="label">
+                            <span class="label-text">Enter amount</span>
+                        </label>
+                        <label class="input-group">
+                            <input type="text" placeholder="0.01" class="input input-bordered" />
+                            <span>BTC</span>
+                        </label>
+                    </div>
+                </a>
+            </div>
+        </footer>
     </footer>
 
 
