--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="absolute inset-0 flex items-center justify-center ">
                     <div class="text-center pb-3">
                         <div class="flex flex-col items-center justify-center ">
-                            <img class=" border rounded-full p-4 border-rose-20" src="./images/email.png" alt="">
+                            <img class="h-20 rounded-full w-20" src="./images/foto-sushi-6anudmpILw4-unsplash.jpg" alt="">
                         </div>
 
 
@@ -266,7 +266,7 @@
                 <div class="absolute inset-0 flex items-center justify-center ">
                     <div class="text-center pb-3">
                         <div class="flex flex-col items-center justify-center ">
-                            <img class=" border rounded-full p-4 border-rose-20" src="./images/email.png" alt="">
+                            <img class="h-20 rounded-full w-20" src="./images/foto-sushi-6anudmpILw4-unsplash.jpg" alt="">
                         </div>
 
 
@@ -288,7 +288,7 @@
                 <div class="absolute inset-0 flex items-center justify-center ">
                     <div class="text-center pb-3">
                         <div class="flex flex-col items-center justify-center ">
-                            <img class=" border rounded-full p-4 border-rose-20" src="./images/email.png" alt="">
+                            <img class="h-20 border border-white-5pxl border-solid rounded-full min-w-[3px] w-20" src="./images/foto-sushi-6anudmpILw4-unsplash.jpg" alt="">
                         </div>
 
 
@@ -383,7 +383,7 @@
 
             <div class=" grid lg:  grid-cols-2 gap-2 flex-1 md:grid-cols-2   ">
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <figure><img src="/images/location.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
                             Shoes!
@@ -397,7 +397,7 @@
                     </div>
                 </div>
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <figure><img src="/images/call.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
                             Shoes!
@@ -411,7 +411,7 @@
                     </div>
                 </div>
                 <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <figure><img src="/images/email.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
                             Shoes!
@@ -425,7 +425,7 @@
                     </div>
                 </div>
                 <div class="card  bg-base-100 shadow-xl">
-                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <figure><img src="/images/time.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">
                             Shoes!
